--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,5 +9,12 @@ Description: More about what it does (maybe more than one line)
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
-Imports: readr,
-    httr
+Imports:
+    readr,
+    httr,
+    tidyr,
+    dplyr,
+    purrr,
+    stringr,
+    tibble
+RoxygenNote: 5.0.1
